Refactor HTML meta tags for improved SEO and consistency; update CSS for responsive design and menu functionality

--- a/index.html
+++ b/index.html
@@ -2,57 +2,55 @@
 <html lang="fr">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Lisa Giorgi - Avocate fiscaliste à Marseille | Droit fiscal, sociétés & litiges</title>
 
-  <meta name="description"
-    content="Avocate au Barreau de Marseille, Lisa Giorgi vous conseille en droit fiscal, droit des sociétés et en réparation du dommage corporel. Défense rigoureuse et conseils personnalisés." />
+  <meta name="description" content="Avocate au Barreau de Marseille, Lisa Giorgi vous conseille en droit fiscal, droit des sociétés et en réparation du dommage corporel. Défense rigoureuse et conseils personnalisés.">
 
   <!-- Open Graph (Facebook, LinkedIn...) -->
-  <meta property="og:title" content="Lisa Giorgi - Avocate fiscaliste à Marseille" />
-  <meta property="og:description"
-    content="Conseils et défense en fiscalité, droit des sociétés et préjudice corporel à Marseille. Contact rapide et personnalisé." />
-  <meta property="og:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/profil.jpeg" />
-  <meta property="og:url" content="https://lisagiorgiavocat.netlify.app" />
-  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Lisa Giorgi - Avocate fiscaliste à Marseille">
+  <meta property="og:description" content="Conseils et défense en fiscalité, droit des sociétés et préjudice corporel à Marseille. Contact rapide et personnalisé.">
+  <meta property="og:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/profil.jpeg">
+  <meta property="og:url" content="https://lisagiorgiavocat.netlify.app">
+  <meta property="og:type" content="website">
 
   <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Lisa Giorgi - Avocate fiscaliste à Marseille" />
-  <meta name="twitter:description"
-    content="Fiscalité, droit des sociétés, contentieux fiscaux et dommages corporels. Défense de vos droits avec efficacité." />
-  <meta name="twitter:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/profil.jpeg" />
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Lisa Giorgi - Avocate fiscaliste à Marseille">
+  <meta name="twitter:description" content="Fiscalité, droit des sociétés, contentieux fiscaux et dommages corporels. Défense de vos droits avec efficacité.">
+  <meta name="twitter:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/profil.jpeg">
 
   <!-- Canonical -->
-  <link rel="canonical" href="https://lisagiorgiavocat.netlify.app" />
+  <link rel="canonical" href="https://lisagiorgiavocat.netlify.app">
 
-  <!-- Favicon (à ajouter si tu as un fichier favicon.ico ou png) -->
-  <link rel="icon" href="/public/assets/images/logo.ico" type="image/x-icon" />
+  <!-- Favicon -->
+  <link rel="icon" href="/public/assets/images/logo.ico" type="image/x-icon">
 
-  <!-- Contact / réseau -->
-  <link rel="me" href="mailto:lisa.giorgi.avocat@outlook.com" />
-  <link rel="me" href="tel:+33612414382" />
-  <link rel="me" href="https://www.instagram.com/fiscaliz.g/" />
-  <link rel="me" href="https://www.linkedin.com/in/lisa-giorgi-b09844187/" />
+  <!-- Contact / réseaux -->
+  <link rel="me" href="mailto:lisa.giorgi.avocat@outlook.com">
+  <link rel="me" href="tel:+33612414382">
+  <link rel="me" href="https://www.instagram.com/fiscaliz.g/">
+  <link rel="me" href="https://www.linkedin.com/in/lisa-giorgi-b09844187/">
 
-  <!-- SEO technique -->
-  <meta name="robots" content="index, follow" />
-  <meta name="author" content="Lisa Giorgi" />
-  <meta name="language" content="fr" />
+  <!-- SEO -->
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Lisa Giorgi">
+  <meta name="language" content="fr">
 
+  <!-- Styles -->
   <link rel="stylesheet" href="/public/assets/css/styles.css">
   <link rel="stylesheet" href="/public/assets/css/stylesMedia.css">
 </head>
 
+
 <body>
   <div class="header">
     <div class="container">
-      <a href="/index.html" class="logo"><img style="width: 50px; height: 50px; border-radius: 15px;"
-          src="../public/assets/images/logo.jpg" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
+      <a href="/index.html" class="logo"><img  style="width: 50px; height: 50px; border-radius: 15px;" src="/public/assets/images/logo.jpg" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
       <nav class="nav">
-        <button class="menu" id="menu-toggle" aria-label="Menu"></button>
+        <button class="menu" id="menu-toggle"aria-label="Menu"></button>
         <ul class="nav-list">
           <li><a href="#Domaine">Domaine d'activité</a></li>
           <li><a href="#Honoraires">Honoraires</a></li>
@@ -64,7 +62,7 @@
     <div class="hero">
       <div class="hero-bloc-text">
         <div class="bloc-hero">
-          <img style="height: 250px; width: 200px; object-fit: cover; border-radius: 25px;"
+          <img
             src="../public/assets/images/profil-transparente.png" alt="photo de Lisa Giorgi, avocate à Marseille">
           <h1>Lisa Giorgi</h1>
           <h2>Avocat au Barreau de Marseille</h2>
@@ -272,15 +270,16 @@
     <!-- Section Carte -->
     <div id="contact" class="map-container">
       <h3>Où me trouver</h3>
-      <div style="width: 100%; height: 600px;">
         <iframe
           src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=fr&amp;q=Immeuble%20le%20Calypso,%20Quartier%20Euromed,%2048%20Quai%20du%20Lazaret,%2013002%20Marseille+(Lisa%20Giorgi%20Avocate)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
-          style="border: 0; width: 100%; height: 100%;"
-          allowfullscreen=""
-          loading="lazy"
+          title="Carte Google Maps - Localisation de Calypso"
+          width="600" 
+          height="450" 
+          style="border:0;" 
+          allowfullscreen="" 
+          loading="lazy" 
           referrerpolicy="no-referrer-when-downgrade">
         </iframe>
-      </div>
       
     </div>
 
