--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -2,21 +2,43 @@
 <html lang="fr">
 
 <head>
+  <!-- Métadonnées techniques -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="language" content="fr">
+
+  <!-- Référencement naturel (SEO) -->
+  <title>Mentions légales - Maître Giorgi Avocat à Marseille</title>
   <meta name="description" content="Les mentions légales du site de Maître Giorgi, avocat à Marseille. Informations légales concernant la publication et la gestion du site.">
   <meta name="keywords" content="mentions légales, avocat, Marseille, légalité, publication">
   <meta name="author" content="Maître Giorgi">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph (réseaux sociaux comme Facebook / LinkedIn) -->
   <meta property="og:title" content="Mentions légales - Maître Giorgi Avocat à Marseille">
   <meta property="og:description" content="Consultez les mentions légales du site de Maître Giorgi, avocat à Marseille. Informations sur le responsable de la publication et les conditions d'utilisation du site.">
-  <meta property="og:url" content="https://lisagiorgiavocat.netlify.app/mentions-legales">
+  <meta property="og:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/profil.jpeg">
+  <meta property="og:url" content="https://lisagiorgiavocat.netlify.app/mentions-legales.html">
   <meta property="og:type" content="website">
-  <title>Mentions légales - Maître Giorgi Avocat à Marseille</title>
+
+  <!-- Twitter Card (optionnel mais conseillé) -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Mentions légales - Maître Giorgi Avocat à Marseille">
+  <meta name="twitter:description" content="Consultez les mentions légales du site de Maître Giorgi, avocat à Marseille.">
+  <meta name="twitter:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/profil.jpeg">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://lisagiorgiavocat.netlify.app/mentions-legales.html">
+
+  <!-- Icône du site -->
   <link rel="icon" type="image/x-icon" href="/public/assets/images/logo.ico">
+
+  <!-- Feuilles de style -->
   <link rel="stylesheet" href="/public/assets/css/styles.css">
   <link rel="stylesheet" href="/public/assets/css/stylesMedia.css">
 </head>
+
 
 
 
