--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -2,14 +2,20 @@
 <html lang="fr">
 
 <head>
+  <!-- Métadonnées techniques -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="language" content="fr">
+
+  <!-- Référencement naturel (SEO) -->
+  <title>Politique de Confidentialité - Maître Giorgi Avocat à Marseille</title>
   <meta name="description" content="Politique de confidentialité du site de Maître Giorgi, avocate à Marseille. Informations légales sur la collecte, l'utilisation et la protection des données.">
   <meta name="keywords" content="Politique de confidentialité, avocat, Marseille, données personnelles, RGPD">
   <meta name="author" content="Maître Giorgi">
-  
-  <!-- Open Graph / Réseaux sociaux -->
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph (réseaux sociaux) -->
   <meta property="og:title" content="Politique de Confidentialité - Maître Giorgi Avocat à Marseille">
   <meta property="og:description" content="Consultez la politique de confidentialité du site de Maître Giorgi, avocate à Marseille. Découvrez comment vos données sont collectées, utilisées et protégées.">
   <meta property="og:url" content="https://lisagiorgiavocat.netlify.app/politique-confidentialite.html">
@@ -21,11 +27,23 @@
   <meta property="og:site_name" content="Maître Giorgi Avocat à Marseille">
   <meta property="og:locale" content="fr_FR">
 
-  <title>Politique de Confidentialité - Maître Giorgi Avocat à Marseille</title>
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Politique de Confidentialité - Maître Giorgi Avocat à Marseille">
+  <meta name="twitter:description" content="Découvrez la politique de confidentialité de Maître Giorgi, avocate à Marseille. RGPD, données personnelles et sécurité.">
+  <meta name="twitter:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/logo.jpg">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://lisagiorgiavocat.netlify.app/politique-confidentialite.html">
+
+  <!-- Icône du site -->
   <link rel="icon" type="image/x-icon" href="/public/assets/images/logo.ico">
+
+  <!-- Feuilles de style -->
   <link rel="stylesheet" href="/public/assets/css/styles.css">
   <link rel="stylesheet" href="/public/assets/css/stylesMedia.css">
 </head>
+
 
 
 
