Refactor HTML meta tags for improved readability; update footer and legal sections for consistency

--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -10,14 +10,16 @@
 
   <!-- Référencement naturel (SEO) -->
   <title>Mentions légales - Maître Giorgi Avocat à Marseille</title>
-  <meta name="description" content="Les mentions légales du site de Maître Giorgi, avocat à Marseille. Informations légales concernant la publication et la gestion du site.">
+  <meta name="description"
+    content="Les mentions légales du site de Maître Giorgi, avocat à Marseille. Informations légales concernant la publication et la gestion du site.">
   <meta name="keywords" content="mentions légales, avocat, Marseille, légalité, publication">
   <meta name="author" content="Maître Giorgi">
   <meta name="robots" content="index, follow">
 
   <!-- Open Graph (réseaux sociaux comme Facebook / LinkedIn) -->
   <meta property="og:title" content="Mentions légales - Maître Giorgi Avocat à Marseille">
-  <meta property="og:description" content="Consultez les mentions légales du site de Maître Giorgi, avocat à Marseille. Informations sur le responsable de la publication et les conditions d'utilisation du site.">
+  <meta property="og:description"
+    content="Consultez les mentions légales du site de Maître Giorgi, avocat à Marseille. Informations sur le responsable de la publication et les conditions d'utilisation du site.">
   <meta property="og:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/profil.jpeg">
   <meta property="og:url" content="https://lisagiorgiavocat.netlify.app/mentions-legales.html">
   <meta property="og:type" content="website">
@@ -25,7 +27,8 @@
   <!-- Twitter Card (optionnel mais conseillé) -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Mentions légales - Maître Giorgi Avocat à Marseille">
-  <meta name="twitter:description" content="Consultez les mentions légales du site de Maître Giorgi, avocat à Marseille.">
+  <meta name="twitter:description"
+    content="Consultez les mentions légales du site de Maître Giorgi, avocat à Marseille.">
   <meta name="twitter:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/profil.jpeg">
 
   <!-- Canonical -->
@@ -45,108 +48,103 @@
 <body>
   <div class="header">
     <div class="container">
-      <a href="/index.html" class="logo"><img style="width: 50px; height: 50px; border-radius: 15px;" src="../public/assets/images/logo.jpg" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
-      <nav class="nav-page">
+      <a href="/index.html" class="logo"><img style="width: 50px; height: 50px; border-radius: 15px;"
+          src="../public/assets/images/logo.jpg" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
+      <nav class="nav">
         <ul class="nav-list">
           <li><a href="/index.html">Accueil</a></li>
-
         </ul>
       </nav>
     </div>
     <div class="hero">
       <div class="hero-bloc-text">
-        <div class="bloc-hero" >
-        <h1>Mentions legales</h1>
+        <div class="bloc-hero">
+          <h1>Mentions legales</h1>
+        </div>
       </div>
-      </div>
-      <img class="img-header" src="./public/assets/images/Palais_de_justice_de_Marseille.jpg" alt="Palais de justice de Marseille">
+      <img class="img-header" src="./public/assets/images/Palais_de_justice_de_Marseille.jpg"
+        alt="Palais de justice de Marseille">
     </div>
   </div>
-  
-    <div style="padding: 25px; text-align: center;" class="legal-notice">
-      <h2>Informations légales</h2>
-      <p>Conformément à la législation en vigueur, voici les informations concernant le site de Maître Giorgi.</p>
-  
-      <h3>1. Éditeur du site</h3>
-      <p>Le site Lisa Giorgi - Avocat à Marseille est édité par :<br>
-        Maître Giorgi, Avocate en fiscalité des particuliers et des entreprises, avec une approche intégrée en droit des sociétés.<br>
-        Réalisation technique : Natam<br>
-        Téléphone : <a href="tel:+33749591337">+33 7 49 59 13 37</a><br>
-        Email : <a href="mailto:contact@natam.fr">contact@natam.fr</a> / <a href="mailto:natam.business@gmail.com">natam.business@gmail.com</a>
-      </p>   
-  
-      <h3>2. Hébergeur du site</h3>
-      <p>Le site est hébergé par :<br>
-        Netlify<br>
-        Adresse : 44 Montgomery Street, Suite 300, San Francisco, CA 94104, États-Unis<br>
-        Téléphone : +1 844-899-7312
-      </p>
-  
-      <h3>3. Propriété intellectuelle</h3>
-      <p>Le contenu du site (textes, images, logos, etc.) est la propriété exclusive de Maître Giorgi, sauf mention contraire. Toute reproduction ou utilisation sans autorisation préalable est interdite.</p>
-  
-      <h3>4. Données personnelles</h3>
-      <p>Les données personnelles collectées sur ce site sont utilisées uniquement dans le cadre de la gestion des demandes de contact et des services proposés par Maître Giorgi. Vous disposez d'un droit d'accès, de rectification et de suppression de vos données personnelles.</p>
-  
-      <h3>5. Responsabilité</h3>
-      <p>Maître Giorgi met tout en œuvre pour assurer la bonne qualité des informations sur ce site, mais ne saurait être tenue responsable des erreurs ou omissions pouvant y figurer.</p>
-    </div>
-  
+
+  <div style="padding: 25px; text-align: center;" class="legal-notice">
+    <h2>Informations légales</h2>
+    <p>Conformément à la législation en vigueur, voici les informations concernant le site de Maître Giorgi.</p>
+
+    <h3>1. Éditeur du site</h3>
+    <p>Le site Lisa Giorgi - Avocat à Marseille est édité par :<br>
+      Maître Giorgi, Avocate en fiscalité des particuliers et des entreprises, avec une approche intégrée en droit des
+      sociétés.<br>
+      Réalisation technique : Natam<br>
+      Téléphone : <a href="tel:+33749591337">+33 7 49 59 13 37</a><br>
+      Email : <a href="mailto:contact@natam.fr">contact@natam.fr</a> / <a
+        href="mailto:natam.business@gmail.com">natam.business@gmail.com</a>
+    </p>
+
+    <h3>2. Hébergeur du site</h3>
+    <p>Le site est hébergé par :<br>
+      Netlify<br>
+      Adresse : 44 Montgomery Street, Suite 300, San Francisco, CA 94104, États-Unis<br>
+      Téléphone : +1 844-899-7312
+    </p>
+
+    <h3>3. Propriété intellectuelle</h3>
+    <p>Le contenu du site (textes, images, logos, etc.) est la propriété exclusive de Maître Giorgi, sauf mention
+      contraire. Toute reproduction ou utilisation sans autorisation préalable est interdite.</p>
+
+    <h3>4. Données personnelles</h3>
+    <p>Les données personnelles collectées sur ce site sont utilisées uniquement dans le cadre de la gestion des
+      demandes de contact et des services proposés par Maître Giorgi. Vous disposez d'un droit d'accès, de rectification
+      et de suppression de vos données personnelles.</p>
+
+    <h3>5. Responsabilité</h3>
+    <p>Maître Giorgi met tout en œuvre pour assurer la bonne qualité des informations sur ce site, mais ne saurait être
+      tenue responsable des erreurs ou omissions pouvant y figurer.</p>
+  </div>
+
   <!-- Footer -->
   <footer class="footer">
     <div class="footer-container">
       <!-- Section Logos -->
       <div class="footer-logos">
-        <a href="#" class="logo">        <img style="height: 50; width: 50px; object-fit: cover; border-radius: 15px;" src="./public/assets/images/logo.jpg" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
+        <a href="#" class="logo"> <img style="height: 50; width: 50px; object-fit: cover; border-radius: 15px;"
+            src="./public/assets/images/logo.jpg" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
         <a href="mailto:lisa.giorgi.avocat@outlook.com">
-          <img class="footerA" src="../public/assets/images/email.svg" alt="Email"> 
-      </a>
-      <a href="tel:+33612414382">
+          <img class="footerA" src="../public/assets/images/email.svg" alt="Email">
+        </a>
+        <a href="tel:+33612414382">
           <img class="footerA" src="../public/assets/images/tel2.svg" alt="Téléphone">
-      </a>
-          <a href="https://www.instagram.com/fiscaliz.g/" target="_blank">
-              <img class="footerA" src="../public/assets/images/insta.svg" alt="Instagram">
-          </a>
-          <a href="https://www.linkedin.com/in/lisa-giorgi-b09844187/?originalSubdomain=fr" target="_blank">
-              <img class="footerA" src="../public/assets/images/linkedin.svg" alt="LinkedIn">
-          </a>
+        </a>
+        <a href="https://www.instagram.com/fiscaliz.g/" target="_blank">
+          <img class="footerA" src="../public/assets/images/insta.svg" alt="Instagram">
+        </a>
+        <a href="https://www.linkedin.com/in/lisa-giorgi-b09844187/?originalSubdomain=fr" target="_blank">
+          <img class="footerA" src="../public/assets/images/linkedin.svg" alt="LinkedIn">
+        </a>
       </div>
 
       <div class="footer-info">
         <div>
           <p>🕒 Horaires d’ouverture : 9h - 19h</p>
           <p>📍 Adresse: 48 Quai du Lazaret, immeuble Le Calypso, 13002 Marseille</p>
-        </div> 
-  
+        </div>
+
       </div>
       <!-- Section Informations -->
       <div class="footer-info">
         <div>
-        <p>⚖️ <a href="/mentions-legales.html" target="_blank">Mentions légales</a></p>
-        <p>🔒 <a href="/politique-confidentialite.html" target="_blank">Politique de confidentialité</a></p>
-        <p>📝 <a href="https://natam.fr/mentions-legales.html" target="_blank">Mentions sur l'éditeur du site</a></p>
+          <p>⚖️ <a href="/mentions-legales.html" target="_blank">Mentions légales</a></p>
+          <p>🔒 <a href="/politique-confidentialite.html" target="_blank">Politique de confidentialité</a></p>
+          <p>📝 <a href="https://natam.fr/mentions-legales.html" target="_blank">Mentions sur l'éditeur du site</a></p>
         </div>
       </div>
       <div class="droit-reserver">
-          <p style="padding: 5px;">© 2025 Natam</p>
-          <p style="padding: 5px;">Tous droits réservés</p>
+        <p style="padding: 5px;">© 2025 Natam</p>
+        <p style="padding: 5px;">Tous droits réservés</p>
       </div>
     </div>
   </footer>
-
-<style>
-.nav-page a{
-  all: unset;
-  list-style: none;
-    gap: 15px;
-    padding: 5px;
-}
-.nav-page li{
-  all: unset;
-}
-</style>
-
-<script src="/public/assets/js/script.js"></script>
+  <script src="/public/assets/js/script.js"></script>
 </body>
 
 
