--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 
   <title>Lisa Giorgi - Avocate fiscaliste à Marseille | Droit fiscal, sociétés & litiges</title>
 
-  <meta name="description" content="Avocate au Barreau de Marseille, Lisa Giorgi vous conseille en droit fiscal, droit des sociétés et en réparation du dommage corporel. Défense rigoureuse et conseils personnalisés.">
+  <meta name="description"
+    content="Avocate au Barreau de Marseille, Lisa Giorgi vous conseille en droit fiscal, droit des sociétés et en réparation du dommage corporel. Défense rigoureuse et conseils personnalisés.">
 
   <!-- Open Graph (Facebook, LinkedIn...) -->
   <meta property="og:title" content="Lisa Giorgi - Avocate fiscaliste à Marseille">
-  <meta property="og:description" content="Conseils et défense en fiscalité, droit des sociétés et préjudice corporel à Marseille. Contact rapide et personnalisé.">
+  <meta property="og:description"
+    content="Conseils et défense en fiscalité, droit des sociétés et préjudice corporel à Marseille. Contact rapide et personnalisé.">
   <meta property="og:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/profil.jpeg">
   <meta property="og:url" content="https://lisagiorgiavocat.netlify.app">
   <meta property="og:type" content="website">
@@ -19,7 +21,8 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Lisa Giorgi - Avocate fiscaliste à Marseille">
-  <meta name="twitter:description" content="Fiscalité, droit des sociétés, contentieux fiscaux et dommages corporels. Défense de vos droits avec efficacité.">
+  <meta name="twitter:description"
+    content="Fiscalité, droit des sociétés, contentieux fiscaux et dommages corporels. Défense de vos droits avec efficacité.">
   <meta name="twitter:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/profil.jpeg">
 
   <!-- Canonical -->
@@ -48,7 +51,8 @@
 <body>
   <div class="header">
     <div class="container">
-      <a href="/index.html" class="logo"><img  style="width: 50px; height: 50px; border-radius: 15px;" src="/public/assets/images/logo.jpg" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
+      <a href="/index.html" class="logo"><img style="width: 50px; height: 50px; border-radius: 15px;"
+          src="/public/assets/images/logo.jpg" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
       <nav class="nav">
         <button class="menu" id="menu-toggle" aria-label="Menu"></button>
         <ul class="nav-list">
@@ -62,8 +66,7 @@
     <div class="hero">
       <div class="hero-bloc-text">
         <div class="bloc-hero">
-          <img
-            src="../public/assets/images/profil-transparente.png" alt="photo de Lisa Giorgi, avocate à Marseille">
+          <img src="../public/assets/images/profil-transparente.png" alt="photo de Lisa Giorgi, avocate à Marseille">
           <h1>Lisa Giorgi</h1>
           <h2>Avocat au Barreau de Marseille</h2>
         </div>
@@ -176,160 +179,152 @@
       </div>
     </div>
   </div>
-    <div class="container-why">
-      <div class="thecar-theme-reservation-area">
-        <h2>Pourquoi me choisir ?</h2>
-        <h3>Avocate à Marseille, je vous accompagne avec rigueur et réactivité</h3>
-        <h3>À l'écoute, disponible et engagée, je défends vos intérêts avec détermination</h3>
-      </div>
-
-    </div>
-    <div id="Honoraires" class="services">
-      <h3>Mes Honoraires</h3>
-      <div class="service-list">
-        <div class="service-item">
-          <h3>Honoraires au temps passé</h3>
-          <p>Les honoraires sont calculés en fonction du temps effectivement consacré à chaque dossier, sur la base d’un
-            tarif horaire préalablement défini.</p>
-        </div>
-        <div class="service-item">
-          <h3>Honoraires au forfait</h3>
-          <p>Un montant fixe est convenu pour l’ensemble de la mission, garantissant une prévisibilité totale des coûts,
-            indépendamment des aléas de la procédure.</p>
-        </div>
-        <div class="service-item">
-          <h3>Honoraires au résultat</h3>
-          <p>L’honoraire est établi en fonction des résultats obtenus, avec une part variable liée à la réussite de
-            l’action, qu’il s’agisse d’une indemnisation, d’une réduction de créance ou de tout autre avantage lié au
-            dossier. Cette formule est toujours complémentaire aux honoraires au temps passé et au forfait.</p>
-        </div>
-      </div>
+  <div class="container-why">
+    <div class="thecar-theme-reservation-area">
+      <h2>Pourquoi me choisir ?</h2>
+      <h3>Avocate à Marseille, je vous accompagne avec rigueur et réactivité</h3>
+      <h3>À l'écoute, disponible et engagée, je défends vos intérêts avec détermination</h3>
     </div>
 
-    <!-- Avis Client Section -->
-    <section id="avis">
-      <h3>Avis Clients</h3>
-      <div class="avis-container">
-        <div class="avis-slider">
-          <div class="avis-card">
-            <h3>Anne-Sophie Asselin</h3>
-            <p>"Magnifique espace pour des rendez-vous professionnels, entretiens et séminaires. Les locaux sont
-              flambant
-              neufs, modernes et confortables. Un véritable plaisir !"</p>
-            <div class="stars">★★★★★</div>
-          </div>
-          <div class="avis-card">
-            <h3>Jeanine FIALON</h3>
-            <p>"Un immeuble de bureaux très récent, situé dans un quartier d’affaires dynamique. Parfaitement entretenu
-              et
-              fonctionnel."</p>
-            <div class="stars">★★★★☆</div>
-          </div>
-          <div class="avis-card">
-            <h3>Zena Zen</h3>
-            <p>"Immeuble de bureaux sympa, j’aime beaucoup le café à l’intérieur !"</p>
-            <div class="stars">★★★★☆</div>
-          </div>
-          <div class="avis-card">
-            <h3>Olivier Malabiau</h3>
-            <p>"Un complexe moderne, voire futuriste, à proximité des ports. Petit bémol : les accès sont un peu
-              compliqués."</p>
-            <div class="stars">★★★★☆</div>
-          </div>
-          <div class="avis-card">
-            <h3>Anthony Daussy</h3>
-            <p>"Un lieu très moderne et neuf où l'on se sent bien. Idéal pour travailler en toute sérénité."</p>
-            <div class="stars">★★★★★</div>
-          </div>
-          <div class="avis-card">
-            <h3>Jack Salnot</h3>
-            <p>"Immeuble sobre et bien conçu, mais il manque un peu d’âme à mon goût."</p>
-            <div class="stars">★★★☆☆</div>
-          </div>
-          <div class="avis-card">
-            <h3>Marlène Jackson</h3>
-            <p>"Un immeuble de bureaux moderne et bien aménagé. Rien à redire !"</p>
-            <div class="stars">★★★★☆</div>
-          </div>
-          <div class="avis-card">
-            <h3>Mahesh Kumar</h3>
-            <p>"Un très bon espace de bureaux, bien organisé et agréable."</p>
-            <div class="stars">★★★★★</div>
-          </div>
-          <div class="avis-card">
-            <h3>Allen Alvares</h3>
-            <p>"Un espace de travail impeccable, idéalement situé. Je recommande."</p>
-            <div class="stars">★★★★★</div>
-          </div>
-        </div>
+  </div>
+  <div id="Honoraires" class="services">
+    <h3>Mes Honoraires</h3>
+    <div class="service-list">
+      <div class="service-item">
+        <h3>Honoraires au temps passé</h3>
+        <p>Les honoraires sont calculés en fonction du temps effectivement consacré à chaque dossier, sur la base d’un
+          tarif horaire préalablement défini.</p>
       </div>
-    </section>
-
-
-
-    <!-- Section Carte -->
-    <div id="contact" class="map-container">
-      <h3>Où me trouver</h3>
-        <iframe
-          src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=fr&amp;q=Immeuble%20le%20Calypso,%20Quartier%20Euromed,%2048%20Quai%20du%20Lazaret,%2013002%20Marseille+(Lisa%20Giorgi%20Avocate)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
-          title="Carte Google Maps - Localisation de Calypso"
-          width="600" 
-          height="450" 
-          style="border:0;" 
-          allowfullscreen="" 
-          loading="lazy" 
-          referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
-      
+      <div class="service-item">
+        <h3>Honoraires au forfait</h3>
+        <p>Un montant fixe est convenu pour l’ensemble de la mission, garantissant une prévisibilité totale des coûts,
+          indépendamment des aléas de la procédure.</p>
+      </div>
+      <div class="service-item">
+        <h3>Honoraires au résultat</h3>
+        <p>L’honoraire est établi en fonction des résultats obtenus, avec une part variable liée à la réussite de
+          l’action, qu’il s’agisse d’une indemnisation, d’une réduction de créance ou de tout autre avantage lié au
+          dossier. Cette formule est toujours complémentaire aux honoraires au temps passé et au forfait.</p>
+      </div>
     </div>
+  </div>
 
-    <!-- Footer -->
-    <footer class="footer">
-      <div class="footer-container">
-        <!-- Section Logos -->
-        <div class="footer-logos">
-          <a href="#" class="logo"><img style="height: 50px; width: 50px; object-fit: cover; border-radius: 15px;"
-              src="./public/assets/images/logo.jpg" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
-          <a href="mailto:lisa.giorgi.avocat@outlook.com">
-            <img class="footerA" src="../public/assets/images/email.svg" alt="Email">
-          </a>
-          <a href="tel:+33612414382">
-            <img class="footerA" src="../public/assets/images/tel2.svg" alt="Téléphone">
-          </a>
-          <a href="https://www.instagram.com/fiscaliz.g/" target="_blank">
-            <img class="footerA" src="../public/assets/images/insta.svg" alt="Instagram">
-          </a>
-          <a href="https://www.linkedin.com/in/lisa-giorgi-b09844187/?originalSubdomain=fr" target="_blank">
-            <img class="footerA" src="../public/assets/images/linkedin.svg" alt="LinkedIn">
-          </a>
+  <!-- Avis Client Section -->
+  <section id="avis">
+    <h3>Avis Clients</h3>
+    <div class="avis-container">
+      <div class="avis-slider">
+        <div class="avis-card">
+          <h3>Anne-Sophie Asselin</h3>
+          <p>"Magnifique espace pour des rendez-vous professionnels, entretiens et séminaires. Les locaux sont
+            flambant
+            neufs, modernes et confortables. Un véritable plaisir !"</p>
+          <div class="stars">★★★★★</div>
         </div>
-
-        <div class="footer-info">
-          <div>
-            <p>🕒 Horaires d’ouverture : 9h - 19h</p>
-            <p>📍 Adresse: 48 Quai du Lazaret, immeuble Le Calypso, 13002 Marseille</p>
-          </div>
-
+        <div class="avis-card">
+          <h3>Jeanine FIALON</h3>
+          <p>"Un immeuble de bureaux très récent, situé dans un quartier d’affaires dynamique. Parfaitement entretenu
+            et
+            fonctionnel."</p>
+          <div class="stars">★★★★☆</div>
         </div>
-        <!-- Section Informations -->
-        <div class="footer-info">
-          <div>
-            <p>⚖️ <a href="/mentions-legales.html" target="_blank">Mentions légales</a></p>
-            <p>🔒 <a href="/politique-confidentialite.html" target="_blank">Politique de confidentialité</a></p>
-            <p>📝 <a href="https://natam.fr/mentions-legales.html" target="_blank">Mentions sur l'éditeur du site</a>
-            </p>
-          </div>
+        <div class="avis-card">
+          <h3>Zena Zen</h3>
+          <p>"Immeuble de bureaux sympa, j’aime beaucoup le café à l’intérieur !"</p>
+          <div class="stars">★★★★☆</div>
         </div>
-        <div class="droit-reserver">
-          <p style="padding: 5px;">© 2025 Natam</p>
-          <p style="padding: 5px;">Tous droits réservés</p>
+        <div class="avis-card">
+          <h3>Olivier Malabiau</h3>
+          <p>"Un complexe moderne, voire futuriste, à proximité des ports. Petit bémol : les accès sont un peu
+            compliqués."</p>
+          <div class="stars">★★★★☆</div>
+        </div>
+        <div class="avis-card">
+          <h3>Anthony Daussy</h3>
+          <p>"Un lieu très moderne et neuf où l'on se sent bien. Idéal pour travailler en toute sérénité."</p>
+          <div class="stars">★★★★★</div>
+        </div>
+        <div class="avis-card">
+          <h3>Jack Salnot</h3>
+          <p>"Immeuble sobre et bien conçu, mais il manque un peu d’âme à mon goût."</p>
+          <div class="stars">★★★☆☆</div>
+        </div>
+        <div class="avis-card">
+          <h3>Marlène Jackson</h3>
+          <p>"Un immeuble de bureaux moderne et bien aménagé. Rien à redire !"</p>
+          <div class="stars">★★★★☆</div>
+        </div>
+        <div class="avis-card">
+          <h3>Mahesh Kumar</h3>
+          <p>"Un très bon espace de bureaux, bien organisé et agréable."</p>
+          <div class="stars">★★★★★</div>
+        </div>
+        <div class="avis-card">
+          <h3>Allen Alvares</h3>
+          <p>"Un espace de travail impeccable, idéalement situé. Je recommande."</p>
+          <div class="stars">★★★★★</div>
         </div>
       </div>
-    </footer>
+    </div>
+  </section>
 
 
 
-    <script src="/public/assets/js/script.js"></script>
+  <!-- Section Carte -->
+  <div id="contact" class="map-container">
+    <h3>Où me trouver</h3>
+    <iframe
+      src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=fr&amp;q=Immeuble%20le%20Calypso,%20Quartier%20Euromed,%2048%20Quai%20du%20Lazaret,%2013002%20Marseille+(Lisa%20Giorgi%20Avocate)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
+      title="Carte Google Maps - Localisation de Calypso" width="600" height="450" style="border:0;" allowfullscreen=""
+      loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+
+  </div>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="footer-container">
+      <!-- Section Logos -->
+      <div class="footer-logos">
+        <a href="#" class="logo"><img style="height: 50px; width: 50px; object-fit: cover; border-radius: 15px;"
+            src="./public/assets/images/logo.jpg" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
+        <a href="mailto:lisa.giorgi.avocat@outlook.com">
+          <img class="footerA" src="../public/assets/images/email.svg" alt="Email">
+        </a>
+        <a href="tel:+33612414382">
+          <img class="footerA" src="../public/assets/images/tel2.svg" alt="Téléphone">
+        </a>
+        <a href="https://www.instagram.com/fiscaliz.g/" target="_blank">
+          <img class="footerA" src="../public/assets/images/insta.svg" alt="Instagram">
+        </a>
+        <a href="https://www.linkedin.com/in/lisa-giorgi-b09844187/?originalSubdomain=fr" target="_blank">
+          <img class="footerA" src="../public/assets/images/linkedin.svg" alt="LinkedIn">
+        </a>
+      </div>
+
+      <div class="footer-info">
+        <div>
+          <p>🕒 Horaires d’ouverture : 9h - 19h</p>
+          <p>📍 Adresse: 48 Quai du Lazaret, immeuble Le Calypso, 13002 Marseille</p>
+        </div>
+
+      </div>
+      <!-- Section Informations -->
+      <div class="footer-info">
+        <div>
+          <p>⚖️ <a href="/mentions-legales.html" target="_blank">Mentions légales</a></p>
+          <p>🔒 <a href="/politique-confidentialite.html" target="_blank">Politique de confidentialité</a></p>
+          <p>📝 <a href="https://natam.fr/mentions-legales.html" target="_blank">Mentions sur l'éditeur du site</a>
+          </p>
+        </div>
+      </div>
+      <div class="droit-reserver">
+        <p style="padding: 5px;">© 2025 Natam</p>
+        <p style="padding: 5px;">Tous droits réservés</p>
+      </div>
+    </div>
+  </footer>
+  <script src="/public/assets/js/script.js"></script>
 </body>
 
 </html>
