Enhance interactivity by adding card flip functionality and improving menu toggle behavior

--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -107,7 +107,7 @@
     <div class="footer-container">
       <!-- Section Logos -->
       <div class="footer-logos">
-        <a href="#" class="logo"> <img style="height: 50; width: 50px; object-fit: cover; border-radius: 15px;"
+        <a href="#" class="logo"> <img style="height: 50px; width: 50px; border-radius: 15px;"
             src="./public/assets/images/logo.jpg" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
         <a href="mailto:lisa.giorgi.avocat@outlook.com">
           <img class="footerA" src="../public/assets/images/email.svg" alt="Email">
