Add custom fonts and update body font styles for improved typography

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
   <!-- Styles -->
   <link rel="stylesheet" href="/public/assets/css/styles.css">
   <link rel="stylesheet" href="/public/assets/css/stylesMedia.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Arizonia&family=Pinyon+Script&family=Playwrite+AU+SA:wght@100..400&display=swap" rel="stylesheet">
 </head>
 
 
