--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="header">
     <div class="container">
       <a href="#" class="logo"><img style="width: 50px; height: 50px; border-radius: 15px;"
-          src="/public/assets/images/logo.jpg" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
+          src="/public/assets/images/logo.webp" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
       <nav class="nav">
         <button class="menu" id="menu-toggle" aria-label="Menu"></button>
         <ul class="nav-list">
@@ -335,7 +335,7 @@
       <!-- Section Logos -->
       <div class="footer-logos">
         <a href="#" class="logo"><img style="height: 50px; width: 50px;border-radius: 15px;"
-            src="./public/assets/images/logo.jpg" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
+            src="./public/assets/images/logo.webp" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
         <a href="mailto:lisa.giorgi.avocat@outlook.com">
           <img class="footerA" src="../public/assets/images/email.svg" alt="Email">
         </a>
