Refine meta tags for improved SEO and Open Graph sharing consistency

--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Lisa Giorgi - Avocate fiscaliste à Marseille | Droit fiscal, sociétés & litiges</title>
-
   <meta name="description"
-    content="Avocate au Barreau de Marseille, Lisa Giorgi vous conseille en droit fiscal, droit des sociétés et en réparation du dommage corporel. Défense rigoureuse et conseils personnalisés.">
+    content="Lisa Giorgi, avocate au Barreau de Marseille, vous accompagne en droit fiscal, droit des sociétés et réparation du dommage corporel. Conseils personnalisés et défense rigoureuse.">
+  <meta name="keywords"
+    content="avocate Marseille, droit fiscal, avocat fiscaliste, droit des sociétés, préjudice corporel, contentieux fiscal, avocat entreprise, avocat Marseille, fiscalité, avocat litiges">
+  <meta name="robots" content="index, follow">
 
   <!-- Open Graph (Facebook, LinkedIn...) -->
   <meta property="og:title" content="Lisa Giorgi - Avocate fiscaliste à Marseille">
   <meta property="og:description"
-    content="Conseils et défense en fiscalité, droit des sociétés et préjudice corporel à Marseille. Contact rapide et personnalisé.">
-  <meta property="og:image" content="https://lisagiorgiavocat.netlify.app/assets/images/profil.jpeg">
+    content="Conseils et défense en droit fiscal, droit des sociétés et réparation du dommage corporel à Marseille. Prise de contact rapide et efficace.">
+  <meta property="og:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/Palais_de_justice_de_Marseille.jpg">
   <meta property="og:url" content="https://lisagiorgiavocat.netlify.app">
   <meta property="og:type" content="website">
 
@@ -22,33 +23,27 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Lisa Giorgi - Avocate fiscaliste à Marseille">
   <meta name="twitter:description"
-    content="Fiscalité, droit des sociétés, contentieux fiscaux et dommages corporels. Défense de vos droits avec efficacité.">
-  <meta name="twitter:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/profil.jpeg">
+    content="Avocate à Marseille en droit fiscal, sociétés, contentieux fiscaux et préjudices corporels. Défense personnalisée et réactive.">
+  <meta name="twitter:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/Palais_de_justice_de_Marseille.jpg">
 
-  <!-- Canonical -->
-  <link rel="canonical" href="https://lisagiorgiavocat.netlify.app">
-
-  <!-- Favicon -->
-  <link rel="icon" href="/public/assets/images/logo.ico" type="image/x-icon">
-
-  <!-- Contact / réseaux -->
-  <link rel="me" href="mailto:lisa.giorgi.avocat@outlook.com">
-  <link rel="me" href="tel:+33612414382">
-  <link rel="me" href="https://www.instagram.com/fiscaliz.g/">
-  <link rel="me" href="https://www.linkedin.com/in/lisa-giorgi-b09844187/">
-
-  <!-- SEO -->
-  <meta name="robots" content="index, follow">
+  <!-- Auteur et favicon -->
   <meta name="author" content="Lisa Giorgi">
-  <meta name="language" content="fr">
+  <link rel="icon" href="https://lisagiorgiavocat.netlify.app/assets/images/logo.ico" type="image/x-icon">
+  <link rel="preload" as="image" href="https://lisagiorgiavocat.netlify.app/public/assets/images/Palais_de_justice_de_Marseille.jpg">
 
-  <!-- Styles -->
-  <link rel="stylesheet" href="/public/assets/css/styles.css">
-  <link rel="stylesheet" href="/public/assets/css/stylesMedia.css">
+  <!-- Titre de la page -->
+  <title>Lisa Giorgi - Avocate fiscaliste à Marseille | Droit fiscal, sociétés & litiges</title>
+
+  <!-- Feuilles de style -->
+  <link rel="stylesheet" href="/assets/css/styles.css">
+  <link rel="stylesheet" href="/assets/css/stylesMedia.css">
+
+  <!-- Fonts Google -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Arizonia&family=Pinyon+Script&family=Playwrite+AU+SA:wght@100..400&display=swap" rel="stylesheet">
 </head>
+
 
 
 <body>
