Fix stylesheet links to use the correct public path

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
   <!-- Titre de la page -->
   <title>Lisa Giorgi - Avocate fiscaliste à Marseille | Droit fiscal, sociétés & litiges</title>
 
-  <!-- Feuilles de style -->
-  <link rel="stylesheet" href="/assets/css/styles.css">
-  <link rel="stylesheet" href="/assets/css/stylesMedia.css">
-
-  <!-- Fonts Google -->
+ 
+  <!-- Styles -->
+  <link rel="stylesheet" href="/public/assets/css/styles.css">
+  <link rel="stylesheet" href="/public/assets/css/stylesMedia.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Arizonia&family=Pinyon+Script&family=Playwrite+AU+SA:wght@100..400&display=swap" rel="stylesheet">
+</head>
 </head>
 
 
