--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               <h3 class="blog-card-title">Gestion des contrôles et litiges fiscaux</h3>
               <p class="blog-card-text">Je défends les intérêts de mes clients dans la gestion des contrôles et litiges
                 fiscaux, en agissant avec pragmatisme et réactivité.</p>
-                <p>Je les assiste dans les relations avec
+                <p class="blog-card-text">Je les assiste dans les relations avec
                   l’administration fiscale, en élaborant des stratégies de défense adaptées à chaque situation.</p>
                 <button class="flip-btn" onclick="flipCard(this)">En savoir plus</button>
               </div>
