Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:title" content="Lisa Giorgi - Avocate fiscaliste à Marseille">
   <meta property="og:description"
     content="Conseils et défense en droit fiscal, droit des sociétés et réparation du dommage corporel à Marseille. Prise de contact rapide et efficace.">
-  <meta property="og:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/Palais_de_justice_de_Marseille.jpg">
+  <meta property="og:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/Palais_de_justice_de_Marseille.webp">
   <meta property="og:url" content="https://lisagiorgiavocat.netlify.app">
   <meta property="og:type" content="website">
 
@@ -24,12 +24,12 @@
   <meta name="twitter:title" content="Lisa Giorgi - Avocate fiscaliste à Marseille">
   <meta name="twitter:description"
     content="Avocate à Marseille en droit fiscal, sociétés, contentieux fiscaux et préjudices corporels. Défense personnalisée et réactive.">
-  <meta name="twitter:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/Palais_de_justice_de_Marseille.jpg">
+  <meta name="twitter:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/Palais_de_justice_de_Marseille.webp">
 
   <!-- Auteur et favicon -->
   <meta name="author" content="Lisa Giorgi">
   <link rel="icon" href="https://lisagiorgiavocat.netlify.app/public/assets/images/favicon.ico" type="image/x-icon">
-  <link rel="preload" as="image" href="https://lisagiorgiavocat.netlify.app/public/assets/images/Palais_de_justice_de_Marseille.jpg">
+  <link rel="preload" as="image" href="https://lisagiorgiavocat.netlify.app/public/assets/images/Palais_de_justice_de_Marseille.webp">
 
   <!-- Titre de la page -->
   <title>Lisa Giorgi - Avocate fiscaliste à Marseille | Droit fiscal, sociétés & litiges</title>
@@ -64,12 +64,12 @@
     <div class="hero">
       <div class="hero-bloc-text">
         <div class="bloc-hero">
-          <img src="../public/assets/images/profil-transparente.png" alt="photo de Lisa Giorgi, avocate à Marseille">
+          <img src="../public/assets/images/profil-transparente.webp" alt="photo de Lisa Giorgi, avocate à Marseille">
           <h1>Lisa Giorgi</h1>
           <h2>Avocat au Barreau de Marseille</h2>
         </div>
       </div>
-      <img class="img-header" src="./public/assets/images/Palais_de_justice_de_Marseille.jpg"
+      <img class="img-header" src="./public/assets/images/Palais_de_justice_de_Marseille.webp"
         alt="Palais de justice de Marseille">
     </div>
   </div>
@@ -335,7 +335,7 @@
           <img class="footerA" src="../public/assets/images/email.svg" alt="Email">
         </a>
         <a href="tel:+33612414382">
-          <img class="footerA" src="../public/assets/images/tel2.svg" alt="Téléphone">
+          <img class="footerA" src="../public/assets/images/tel.svg" alt="Téléphone">
         </a>
         <a href="https://www.instagram.com/fiscaliz.g/" target="_blank">
           <img class="footerA" src="../public/assets/images/insta.svg" alt="Instagram">
