Update favicon preload link and add apple-touch-icon for improved branding

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
   <!-- Auteur et favicon -->
   <meta name="author" content="Lisa Giorgi">
   <link rel="icon" href="https://lisagiorgiavocat.netlify.app/public/assets/images/favicon.ico" type="image/x-icon">
-  <link rel="preload" as="image" href="https://lisagiorgiavocat.netlify.app/public/assets/images/Palais_de_justice_de_Marseille.webp">
+  <link rel="preload" as="image" href="https://lisagiorgiavocat.netlify.app/public/assets/images/favicon.ico">
+  <link rel="apple-touch-icon" href="https://lisagiorgiavocat.netlify.app/public/assets/images/favicon.ico">
 
   <!-- Titre de la page -->
   <title>Lisa Giorgi - Avocate fiscaliste à Marseille | Droit fiscal, sociétés & litiges</title>
