Reorganize favicon and author meta tags for improved clarity

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     content="Avocate à Marseille en droit fiscal, sociétés, contentieux fiscaux et préjudices corporels. Défense personnalisée et réactive.">
   <meta name="twitter:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/Palais_de_justice_de_Marseille.webp">
 
-  <!-- Auteur et favicon -->
+  <!-- favicon -->
   <meta name="author" content="Lisa Giorgi">
   <link rel="icon" href="https://lisagiorgiavocat.netlify.app/public/assets/images/favicon.ico" type="image/x-icon">
-  <link rel="preload" as="image" href="https://lisagiorgiavocat.netlify.app/public/assets/images/favicon.ico">
   <link rel="apple-touch-icon" href="https://lisagiorgiavocat.netlify.app/public/assets/images/favicon.ico">
-
+  <!-- Auteur -->
+  <link rel="preload" as="image" href="https://lisagiorgiavocat.netlify.app/public/assets/images/Palais_de_justice_de_Marseille.webp">
   <!-- Titre de la page -->
   <title>Lisa Giorgi - Avocate fiscaliste à Marseille | Droit fiscal, sociétés & litiges</title>
 
