--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:title" content="Lisa Giorgi - Avocate fiscaliste à Marseille">
   <meta property="og:description"
     content="Conseils et défense en droit fiscal, droit des sociétés et réparation du dommage corporel à Marseille. Prise de contact rapide et efficace.">
-  <meta property="og:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/profil-transparente.webp">
+  <meta property="og:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/Palais_de_justice_de_Marseille.webp">
   <meta property="og:url" content="https://lisagiorgiavocat.netlify.app">
   <meta property="og:type" content="website">
 
@@ -24,14 +24,13 @@
   <meta name="twitter:title" content="Lisa Giorgi - Avocate fiscaliste à Marseille">
   <meta name="twitter:description"
     content="Avocate à Marseille en droit fiscal, sociétés, contentieux fiscaux et préjudices corporels. Défense personnalisée et réactive.">
-  <meta name="twitter:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/profil-transparente.webp">
+  <meta name="twitter:image" content="https://lisagiorgiavocat.netlify.app/public/assets/images/Palais_de_justice_de_Marseille.webp">
 
-  <!-- favicon -->
+  <!-- Auteur et favicon -->
   <meta name="author" content="Lisa Giorgi">
   <link rel="icon" href="https://lisagiorgiavocat.netlify.app/public/assets/images/favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" href="https://lisagiorgiavocat.netlify.app/public/assets/images/favicon.ico">
-  <!-- Auteur -->
-  <link rel="preload" as="image" href="https://lisagiorgiavocat.netlify.app/public/assets/images/profil-transparente.webp">
+  <link rel="preload" as="image" href="https://lisagiorgiavocat.netlify.app/public/assets/images/Palais_de_justice_de_Marseille.webp">
+
   <!-- Titre de la page -->
   <title>Lisa Giorgi - Avocate fiscaliste à Marseille | Droit fiscal, sociétés & litiges</title>
 
@@ -42,6 +41,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Arizonia&family=Pinyon+Script&family=Playwrite+AU+SA:wght@100..400&display=swap" rel="stylesheet">
+</head>
 </head>
 
 
