Refactor blog section text for improved clarity and readability

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="blog-card-front">
               <h3 class="blog-card-title">Relations avec l’administration fiscale</h3>
               <p class="blog-card-text">J’accompagne mes clients dans toutes leurs démarches auprès de l’administration
-                fiscale pour simplifier et sécuriser leurs obligations :</p>
+                fiscale pour simplifier et sécuriser leurs obligations.</p>
                 <button class="flip-btn" onclick="flipCard(this)">En savoir plus</button>
 
               </div>
@@ -174,9 +174,13 @@
             <div class="blog-card-front">
               <h3 class="blog-card-title">Droit des sociétés</h3>
               <p class="blog-card-text">L’assistance à mes clients dans la création et l’évolution de leur entreprise est
-                un aspect essentiel de ma pratique. Je les aide à structurer leur société de manière à ce qu’elle soit
-                alignée avec leurs objectifs, tout en anticipant les problématiques fiscales et juridiques. Mon rôle est
-                de leur apporter une vision claire et stratégique à chaque étape :</p>
+                un aspect essentiel de ma pratique.  </p>
+
+                <p class="blog-card-text">Je les aide à structurer leur société de manière à ce qu’elle soit
+                  alignée avec leurs objectifs, tout en anticipant les problématiques fiscales et juridiques.</p>
+                
+                <p class="blog-card-text">Mon rôle est
+                de leur apporter une vision claire et stratégique à chaque étape.</p>
                 <button class="flip-btn" onclick="flipCard(this)">En savoir plus</button>
               </div>
             <div class="blog-card-back">
