--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
   </div>
   <div id="Honoraires" class="services">
-    <h3>Mes Honoraires</h3>
+    <h3>Mes honoraires</h3>
     <div class="service-list">
       <div class="service-item">
         <h3>Honoraires au temps passé</h3>
@@ -259,7 +259,7 @@
 
   <!-- Avis Client Section -->
   <section id="avis">
-    <h3>Avis Clients</h3>
+    <h3>Avis clients</h3>
     <div class="avis-container">
       <div class="avis-slider">
         <div class="avis-card">
