--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 <body>
   <div class="header">
     <div class="container">
-      <a href="#" class="logo"><img style="width: 50px; height: auto; border-radius: 15px;"
-          src="/public/assets/images/logo.webp" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
+      <a href="#" class="logo"><img style="width: 130px; height: auto; border-radius: 15px;"
+          src="/public/assets/images/logo.png" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
       <nav class="nav">
         <button class="menu" id="menu-toggle" aria-label="Menu"></button>
         <ul class="nav-list">
-          <li><a href="#Domaine">Domaine d'activité</a></li>
+          <li><a href="#Domaine">Domaine d'activités</a></li>
           <li><a href="#Honoraires">Honoraires</a></li>
           <li><a href="#avis">Avis clients</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -77,8 +77,8 @@
   <div id="Domaine" class="about">
     <div style="display: flex; justify-content: center; padding: 15px;">
       <div class="service-item" style="padding: 15px;">
-        <h3>Domaine d'activité</h3>
-        <p>Je veille à structurer et sécuriser la fiscalité des particuliers et des entreprise, avec une approche
+        <h3>Domaine d'activités</h3>
+        <p>Je veille à structurer et sécuriser la fiscalité des particuliers et des entreprises, avec une approche
           intégrée en droit des sociétés.</p>
       </div>
     </div>
@@ -334,8 +334,8 @@
     <div class="footer-container">
       <!-- Section Logos -->
       <div class="footer-logos">
-        <a href="#" class="logo"><img style="height: 50px; width: auto;border-radius: 15px;"
-            src="./public/assets/images/logo.webp" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
+        <a href="#" class="logo"><img style="height: 130px; width: auto;border-radius: 15px;"
+            src="./public/assets/images/logo.png" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
         <a href="mailto:lisa.giorgi.avocat@outlook.com">
           <img class="footerA" src="../public/assets/images/email.svg" alt="Email">
         </a>
