--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <nav class="nav">
         <button class="menu" id="menu-toggle" aria-label="Menu"></button>
         <ul class="nav-list">
-          <li><a href="#Domaine">Domaine d'activités</a></li>
+          <li><a href="#Domaine">Domaines d'activités</a></li>
           <li><a href="#Honoraires">Honoraires</a></li>
           <li><a href="#avis">Avis clients</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -77,7 +77,7 @@
   <div id="Domaine" class="about">
     <div style="display: flex; justify-content: center; padding: 15px;">
       <div class="service-item" style="padding: 15px;">
-        <h3>Domaine d'activités</h3>
+        <h3>Domaines d'activités</h3>
         <p>Je veille à structurer et sécuriser la fiscalité des particuliers et des entreprises, avec une approche
           intégrée en droit des sociétés.</p>
       </div>
