--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
       <div class="footer-info">
         <div>
           <p>🕒 Horaires d’ouverture : 9h - 19h</p>
-          <p>📍 Adresse: 48 Quai du Lazaret, immeuble Le Calypso, 13002 Marseille</p>
+          <p>📍 Adresse: 48 Quai du Lazaret, Immeuble Le Calypso, 13002 Marseille</p>
         </div>
 
       </div>
