--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -55,7 +55,7 @@
   <div class="header">
     <div class="container">
       <a href="/index.html" class="logo"><img style="width: 50px; height: 50px; border-radius: 15px;"
-          src="../public/assets/images/logo.jpg" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
+          src="../public/assets/images/logo.png" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
           <nav class="nav">
             <ul class="nav-list">
               <li><a href="/index.html">Accueil</a></li>
@@ -68,7 +68,7 @@
           <h1>Politique de confidentialité</h1>
         </div>
       </div>
-      <img class="img-header" src="./public/assets/images/Palais_de_justice_de_Marseille.jpg"
+      <img class="img-header" src="./public/assets/images/Palais_de_justice_de_Marseille.webp"
         alt="Palais de justice de Marseille">
     </div>
   </div>
@@ -110,12 +110,12 @@
       <!-- Section Logos -->
       <div class="footer-logos">
         <a href="#" class="logo"> <img style="height: 50px; width: 50px;  border-radius: 15px;"
-            src="./public/assets/images/logo.jpg" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
+            src="./public/assets/images/logo.png" alt="Cabinet d’avocat Lisa Giorgi – Logo"></a>
         <a href="mailto:lisa.giorgi.avocat@outlook.com">
           <img class="footerA" src="../public/assets/images/email.svg" alt="Email">
         </a>
         <a href="tel:+33666639768">
-          <img class="footerA" src="../public/assets/images/tel2.svg" alt="Téléphone">
+          <img class="footerA" src="../public/assets/images/tel.svg" alt="Téléphone">
         </a>
         <a href="https://www.instagram.com/fiscaliz.g/" target="_blank">
           <img class="footerA" src="../public/assets/images/insta.svg" alt="Instagram">
@@ -128,7 +128,7 @@
       <div class="footer-info">
         <div>
           <p>🕒 Horaires d’ouverture : 9h - 19h</p>
-          <p>📍 Adresse: 48 Quai du Lazaret, immeuble Le Calypso, 13002 Marseille</p>
+          <p>📍 Adresse: 48 Quai du Lazaret, Immeuble Le Calypso, 13002 Marseille</p>
         </div>
 
       </div>
